# gcsa-locate

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  config.h.in  main.cc  options.h  release.h  seed.h  timer.h
test/data/complex/: c.gcsa  c.gcsa.lcp  c.graph  c.prune.vg  c.xg  reads_n100l100e0i0.seq
